[package]
name = "blog_os"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "*", features = ["map_physical_memory"] }
volatile = "*"
lazy_static = { version = "*", features = ["spin_no_std"] }
spin = "*"
x86_64 = "*"
uart_16550 = "*"
pic8259_simple = "*"
pc-keyboard = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33